--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
       rel="stylesheet"
     />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/footer.css" />
-    <link rel="stylesheet" href="styles/headline.css" />
-    <link rel="stylesheet" href="styles/common.css" />
-    <link rel="stylesheet" href="styles/about.css" />
-    <link rel="stylesheet" href="styles/customers.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="page">
@@ -54,7 +48,15 @@
               />
             </a>
           </nav>
-          <button class="action-button">Get Started</button>
+          <button class="action-button header__button">Get Started</button>
+          <button class="header__menu-button">
+            <span class="header__menu-icon">
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png"
+                alt="Menu Button Icon"
+              />
+            </span>
+          </button>
         </header>
 
         <!-- HEADLINE -->
@@ -67,8 +69,12 @@
               based on their behaviors.
             </p>
             <div class="headline__actions">
-              <button class="action-button">Get Started</button>
-              <button class="headline__learn-more-btn">Learn More</button>
+              <button class="action-button headline__actions-btn">
+                Get Started
+              </button>
+              <button class="headline__learn-more-btn headline__actions-btn">
+                Learn More
+              </button>
             </div>
           </div>
           <img
@@ -98,6 +104,245 @@
         </article>
       </section>
 
+      <!-- CUSTOMERS -->
+
+      <section class="customers">
+        <div class="customers__row">
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+              alt="New York Times Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+              alt="Forbes Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+              alt="Apple Logo"
+            />
+          </div>
+        </div>
+        <div class="customers__row">
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+              alt="Mashable Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+              alt="Wall Street Journal Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+              alt="Google Logo"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- FEATURES - MOBILE -->
+
+      <section class="tips">
+        <div class="tip">
+          <span class="tip__subtitle">Acquire Customers</span>
+          <h3 class="tip__title">Easily find leads and customers</h3>
+          <p class="tip__description">
+            Send one-off and automated email, push, and in-app messages to
+            people. Create better stories.
+          </p>
+          <figure class="tip__decoration">
+            <img
+              class="tip__image-caption"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png"
+              alt="Asquire Customer"
+            />
+            <figcaption class="tip__image-caption">
+              A better way to acquire new users
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="tip">
+          <span class="tip__subtitle">Engage Users</span>
+          <h3 class="tip__title">Engage with your audience</h3>
+          <p class="tip__description">
+            Send one-off and automated email, push, and in-app messages to
+            people. Create better stories.
+          </p>
+          <figure class="tip__decoration">
+            <img
+              class="tip__image-caption"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-engage-user.png"
+              alt="Engage User"
+            />
+            <figcaption class="tip__image-caption">
+              Knowledge base and smart self-service
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="tip">
+          <span class="tip__subtitle">Support</span>
+          <h3 class="tip__title">The best customer experiences</h3>
+          <p class="tip__description">
+            A beautifully simple system for tracking, prioritizing, and solving
+            customer support tickets.
+          </p>
+          <figure class="tip__decoration">
+            <img
+              class="tip__image-caption"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-support.png"
+              alt="Support"
+            />
+            <figcaption class="tip__image-caption">
+              Live chat and messaging
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <!-- FEATURES - DESKTOP -->
+
+      <section class="features">
+        <img
+          class="features__left-decoration"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
+          alt="Half Hidden Head"
+        />
+        <div class="features__content">
+          <div class="features_column">
+            <h4 class="features__subtitle">Features</h4>
+            <h2 class="features__title">Easily find leads and customers</h2>
+            <p class="features__description">
+              Send one-off and automated email, push, and in-app messages to
+              people. Create better stories.
+            </p>
+            <div class="features__advantage-header">
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-compas.png"
+                alt="Icon Compas"
+              />
+              <h5 class="features__advantage-title">Acquire new customers</h5>
+            </div>
+            <p class="features__advantage-description">
+              Everything you need to start building – including open-source
+              code, documentation.
+            </p>
+            <div class="features__advantage-item">
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-building.png"
+                alt="Icon Building"
+              />
+              <span class="features__advantage-item-text">Engage users</span>
+            </div>
+            <div class="features__advantage-item">
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-bucket.png"
+                alt="Icon Bucket"
+              />
+              <span class="features__advantage-item-text"
+                >Develop across platforms</span
+              >
+            </div>
+          </div>
+        </div>
+        <img
+          class="features__banner"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png"
+          alt="Invision Screen"
+        />
+      </section>
+
+      <!-- AUDIENCES -->
+
+      <section class="audiences">
+        <div class="audiences__text">
+          <h4 class="audiences__text_subtitle">Engage Visitors</h4>
+          <h2 class="audiences__text_title">Understand your audience</h2>
+          <p class="audiences__text_parag">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
+          <div class="audiences__text-button">
+            <button class="action-button audiences__text-button-start">Get Started</button>
+            <button class="audiences__text-button-learn">
+              Learn More
+            </button>
+          </div>
+        </div>
+        <div class="audiences__cards">
+            <div class="audiences__cards_user">
+              <img
+                class="audiences__cards_img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+                alt="Developers Logo"
+              /> Developers
+            </div>
+            <div class="audiences__cards_user">
+              <img
+                class="audiences__cards_img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+                alt="Entertainment Logo"
+              /> Entertainment
+            </div>
+            <div class="audiences__cards_user">
+              <img
+                class="audiences__cards_img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+                alt="Athletes Logo"
+              /> Athletes
+            </div>
+            <div class="audiences__cards_user">
+              <img
+                class="audiences__cards_img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+                alt="Creators Logo"
+              /> Creators
+            </div>
+        </div>
+      </section>
+
+      <!-- ORDER -->
+
+      <section class="order">
+        <img
+          class="order__illustration"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
+          alt="Window"
+        />
+        <div class="order__details">
+          <h3 class="order__title">Start your free trial.</h3>
+          <p class="order__text">
+            Get notified about company updates, news and blog posts. We hate
+            spam.
+          </p>
+          <form class="order__form">
+            <input
+              class="order__email"
+              type="email"
+              placeholder="Enter your email"
+            />
+            <button class="action-button order__button">Get Started</button>
+          </form>
+          <p class="order__terms">
+            Free 14-day trial · Easy setup · Cancel any time. Check out
+            <a class="order__terms-link" href="#">Terms of Use</a>.
+          </p>
+        </div>
+      </section>
+
       <!-- FOOTER -->
 
       <footer class="footer">
@@ -112,6 +357,19 @@
               <div class="logo__text">
                 <div class="logo__name">Foundation</div>
                 <div class="logo__description">Startup landing template</div>
+              </div>
+            </div>
+            <div class="logo-vertical">
+              <img
+                class="logo-vertical__image"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
+                alt="logo-vertical-dark"
+              />
+              <div class="logo-vertical__text">
+                <div class="logo-vertical__name">Foundation</div>
+                <div class="logo-vertical__description">
+                  Startup landing template
+                </div>
               </div>
             </div>
             <p class="footer__description">
@@ -130,6 +388,7 @@
               />
             </div>
           </div>
+          <div class="footer__line hide_desktop"></div>
           <div class="additional-navigation">
             <div class="additional-navigation__column nav-links">
               <h3 class="nav-links__title">Product</h3>
@@ -141,7 +400,7 @@
                 <li class="nav-links__list-item">Virtual Inbox</li>
               </ul>
             </div>
-            <div class="nav-links">
+            <div class="additional-navigation__column nav-links">
               <h3 class="nav-links__title">Company</h3>
               <ul class="nav-links__list">
                 <li class="nav-links__list-item">About Foundation</li>
@@ -152,7 +411,7 @@
             </div>
           </div>
         </div>
-        <div class="footer__line"></div>
+        <div class="footer__line hide_mobile"></div>
         <div class="footer-links">
           <nav class="terms">
             <a href="#" class="terms__items">Terms</a>
