--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
           </button>
         </header>
 
-        <!-- HEADLINE -->
-
         <section class="headline">
           <div class="headline__content">
             <h1 class="headline__title">Build stunning websites & apps.</h1>
@@ -85,8 +83,6 @@
         </section>
       </div>
 
-      <!-- ABOUT -->
-
       <section class="about">
         <article class="article">
           <h4 class="article__title">What is it about?</h4>
@@ -103,8 +99,6 @@
           </p>
         </article>
       </section>
-
-      <!-- CUSTOMERS -->
 
       <section class="customers">
         <div class="customers__row">
@@ -154,8 +148,6 @@
           </div>
         </div>
       </section>
-
-      <!-- FEATURES - MOBILE -->
 
       <section class="tips">
         <div class="tip">
@@ -216,8 +208,6 @@
         </div>
       </section>
 
-      <!-- FEATURES - DESKTOP -->
-
       <section class="features">
         <img
           class="features__left-decoration"
@@ -255,8 +245,8 @@
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-bucket.png"
                 alt="Icon Bucket"
               />
-              <span class="features__advantage-item-text"
-                >Develop across platforms</span
+              <span class="features__advantage-item-text">
+                Develop across platforms</span
               >
             </div>
           </div>
@@ -268,53 +258,56 @@
         />
       </section>
 
-      <!-- AUDIENCES -->
-
       <section class="audiences">
         <div class="audiences__text">
           <h4 class="audiences__text_subtitle">Engage Visitors</h4>
           <h2 class="audiences__text_title">Understand your audience</h2>
-          <p class="audiences__text_parag">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
+          <p class="audiences__text_parag">
+            Early stage company? Eligible applicants get all of our products for
+            just $49 a month.
+          </p>
           <div class="audiences__text-button">
-            <button class="action-button audiences__text-button-start">Get Started</button>
-            <button class="audiences__text-button-learn">
-              Learn More
+            <button class="action-button audiences__text-button-start">
+              Get Started
             </button>
+            <button class="audiences__text-button-learn">Learn More</button>
           </div>
         </div>
         <div class="audiences__cards">
-            <div class="audiences__cards_user">
-              <img
-                class="audiences__cards_img"
-                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
-                alt="Developers Logo"
-              /> Developers
-            </div>
-            <div class="audiences__cards_user">
-              <img
-                class="audiences__cards_img"
-                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
-                alt="Entertainment Logo"
-              /> Entertainment
-            </div>
-            <div class="audiences__cards_user">
-              <img
-                class="audiences__cards_img"
-                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
-                alt="Athletes Logo"
-              /> Athletes
-            </div>
-            <div class="audiences__cards_user">
-              <img
-                class="audiences__cards_img"
-                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
-                alt="Creators Logo"
-              /> Creators
-            </div>
+          <div class="audiences__cards_user">
+            <img
+              class="audiences__cards_img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+              alt="Developers Logo"
+            />
+            Developers
+          </div>
+          <div class="audiences__cards_user">
+            <img
+              class="audiences__cards_img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+              alt="Entertainment Logo"
+            />
+            Entertainment
+          </div>
+          <div class="audiences__cards_user">
+            <img
+              class="audiences__cards_img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+              alt="Athletes Logo"
+            />
+            Athletes
+          </div>
+          <div class="audiences__cards_user">
+            <img
+              class="audiences__cards_img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+              alt="Creators Logo"
+            />
+            Creators
+          </div>
         </div>
       </section>
-
-      <!-- ORDER -->
 
       <section class="order">
         <img
@@ -342,8 +335,6 @@
           </p>
         </div>
       </section>
-
-      <!-- FOOTER -->
 
       <footer class="footer">
         <div class="footer-navigation">
