--- a/index.html
+++ b/index.html
@@ -258,49 +258,49 @@
         />
       </section>
 
-      <section class="audiences">
-        <div class="audiences__text">
-          <h4 class="audiences__text_subtitle">Engage Visitors</h4>
-          <h2 class="audiences__text_title">Understand your audience</h2>
-          <p class="audiences__text_parag">
+      <section class="audience">
+        <div class="audience__text">
+          <h4 class="audience__text_subtitle">Engage Visitors</h4>
+          <h2 class="audience__text_title">Understand your audience</h2>
+          <p class="audience__text_parag">
             Early stage company? Eligible applicants get all of our products for
             just $49 a month.
           </p>
-          <div class="audiences__text-button">
-            <button class="action-button audiences__text-button-start">
+          <div class="audience__text-button">
+            <button class="action-button audience__text-button-start">
               Get Started
             </button>
-            <button class="audiences__text-button-learn">Learn More</button>
+            <button class="audience__text-button-learn">Learn More</button>
           </div>
         </div>
-        <div class="audiences__cards">
-          <div class="audiences__cards_user">
+        <div class="audience__cards">
+          <div class="audience__cards_user">
             <img
-              class="audiences__cards_img"
+              class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
               alt="Developers Logo"
             />
             Developers
           </div>
-          <div class="audiences__cards_user">
+          <div class="audience__cards_user">
             <img
-              class="audiences__cards_img"
+              class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
               alt="Entertainment Logo"
             />
             Entertainment
           </div>
-          <div class="audiences__cards_user">
+          <div class="audience__cards_user">
             <img
-              class="audiences__cards_img"
+              class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
               alt="Athletes Logo"
             />
             Athletes
           </div>
-          <div class="audiences__cards_user">
+          <div class="audience__cards_user">
             <img
-              class="audiences__cards_img"
+              class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
               alt="Creators Logo"
             />
