--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
             <button class="audience__text-button-learn">Learn More</button>
           </div>
         </div>
-        <div class="audience__cards">
-          <div class="audience__cards_user">
+        <div class="audience__user">
+          <div class="audience__user-card">
             <img
               class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
@@ -282,7 +282,7 @@
             />
             Developers
           </div>
-          <div class="audience__cards_user">
+          <div class="audience__user-card">
             <img
               class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
@@ -290,7 +290,7 @@
             />
             Entertainment
           </div>
-          <div class="audience__cards_user">
+          <div class="audience__user-card">
             <img
               class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
@@ -298,7 +298,7 @@
             />
             Athletes
           </div>
-          <div class="audience__cards_user">
+          <div class="audience__user-card">
             <img
               class="audience__cards_img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
