--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="audience__user">
           <div class="audience__user-card">
             <img
-              class="audience__cards_img"
+              class="audience__user-img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
               alt="Developers Logo"
             />
@@ -284,7 +284,7 @@
           </div>
           <div class="audience__user-card">
             <img
-              class="audience__cards_img"
+              class="audience__user-img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
               alt="Entertainment Logo"
             />
@@ -292,7 +292,7 @@
           </div>
           <div class="audience__user-card">
             <img
-              class="audience__cards_img"
+              class="audience__user-img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
               alt="Athletes Logo"
             />
@@ -300,7 +300,7 @@
           </div>
           <div class="audience__user-card">
             <img
-              class="audience__cards_img"
+              class="audience__user-img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
               alt="Creators Logo"
             />
