--- a/index.html
+++ b/index.html
@@ -273,34 +273,34 @@
             <button class="audience__text-button-learn">Learn More</button>
           </div>
         </div>
-        <div class="audience__user">
-          <div class="audience__user-card">
+        <div class="user-card">
+          <div class="user-card__block">
             <img
-              class="audience__user-img"
+              class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
               alt="Developers Logo"
             />
             Developers
           </div>
-          <div class="audience__user-card">
+          <div class="user-card__block">
             <img
-              class="audience__user-img"
+              class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
               alt="Entertainment Logo"
             />
             Entertainment
           </div>
-          <div class="audience__user-card">
+          <div class="user-card__block">
             <img
-              class="audience__user-img"
+              class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
               alt="Athletes Logo"
             />
             Athletes
           </div>
-          <div class="audience__user-card">
+          <div class="user-card__block">
             <img
-              class="audience__user-img"
+              class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
               alt="Creators Logo"
             />
