--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
               alt="Developers Logo"
             />
-            Developers
+            <span class="user-card__text"> Developers</span>
           </div>
           <div class="user-card__block">
             <img
@@ -288,7 +288,7 @@
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
               alt="Entertainment Logo"
             />
-            Entertainment
+            <span class="user-card__text"> Entertainment</span>
           </div>
           <div class="user-card__block">
             <img
@@ -296,7 +296,7 @@
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
               alt="Athletes Logo"
             />
-            Athletes
+            <span class="user-card__text"> Athletes</span>
           </div>
           <div class="user-card__block">
             <img
@@ -304,7 +304,7 @@
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
               alt="Creators Logo"
             />
-            Creators
+            <span class="user-card__text"> Creators</span>
           </div>
         </div>
       </section>
