--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
             <button class="audience__text-button-learn">Learn More</button>
           </div>
         </div>
-        <div class="user-card">
-          <div class="user-card__block">
+        <div class="audience__cards">
+          <div class="user-card">
             <img
               class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
@@ -282,7 +282,7 @@
             />
             <span class="user-card__text"> Developers</span>
           </div>
-          <div class="user-card__block">
+          <div class="user-card">
             <img
               class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
@@ -290,7 +290,7 @@
             />
             <span class="user-card__text"> Entertainment</span>
           </div>
-          <div class="user-card__block">
+          <div class="user-card">
             <img
               class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
@@ -298,7 +298,7 @@
             />
             <span class="user-card__text"> Athletes</span>
           </div>
-          <div class="user-card__block">
+          <div class="user-card">
             <img
               class="user-card__img"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
